=head1 Krang Changelog

This document contains a list of changes for each release of Krang.



=head2 3.04 - IN DEVELOPMENT

=over

=item *

Added elements to Media objects, enhanced Media Edit UI to take advantage of the ability 
to create, edit, and publish element data along with media objects. Wrote upgrade code 
to instantiate skeletal media element class. [Noam Weinstein]

=item *

Refactored element_bulk_edit() and element_bulk_save() to ease the
implementation of WYSIWYG-based bulk edit areas. [Bodo Schulze]

=item *

Standardized locations of bottom-panel buttons on Edit screens. [Noam Weinstein]

=item *

Made it possible to associate contributors with a story or media
object even if the user doesn't have the manage_contribs permission,
which should presumably be required only for the ability to add or delete
contributors from the system. [Noam Weinstein]

=item *

Fixed bug where cloning a read-only story doesn't reset may_edit flag.  
[Noam Weinstein]

=item *

Added ability to rename media files (through code, not GUI) without re-uploading 
object. [Noam Weinstein]

=item *

On all Find screens, enable/disable the (green) list buttons according
to the checked status of the list's row checkboxes.  Also
enable/disable the element editor's Delete button according to
the elements' delete checkbox status. [Bodo Schulze]

=item *

Made 'Revert' button for the edit screens of Stories, Media, and Templates 
write to disk (after error-checking), added text clarifying what the new
version number means, updated related tests and docs. [Noam Weinstein]

=item *

Added krang_deploy_templates script to deploy some or all templates
from the command-line. [Noam Weinstein]

=item *

Added option to krang_backup to backup a single instance. [Noam Weinstein]

=item *

Caring for singular/plural in string "Result(s)" on find
screens. [Bodo Schulze]

=item *

Make and remove symlinks (for now only calendar and help files) when